# Agentic-Reinforcement-Learning

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  baseline_inference.py  client.py  conftest.py  inference.py  inference_local.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: HACKATHON_REFERENCE.md  openenv_cheatsheet.md
docs/knowledge-base/: 01-BIOLOGY-AND-SCIENCE.md  04-RL-AND-AI-RESEARCH.md
graders/: __init__.py  base_grader.py  example_graders.py  farm_graders.py
rewards/: __init__.py  base_reward.py  example_rewards.py
server/: app.py
src/agentic_rl/: __init__.py  client.py  constants.py  models.py  rewards.py  tasks.py
src/agentic_rl/engine/: __init__.py  disease.py  economics.py  events.py  fish_biology.py  simulator.py  water_quality.py  weather.py
src/agentic_rl/server/: Dockerfile  app.py  environment.py
tests/: test_constants.py  test_disease.py  test_economics.py  test_endpoints.py  test_environment.py  test_fish_biology.py  test_graders.py  test_models.py  test_rewards.py  test_simulator.py  test_tasks_grader.py  test_water_quality.py
training/: train_grpo.py
vault/docs/: COURSE_CHEATSHEET.md  ENVIRONMENT_RESEARCH.md  ROUND1_COMPLETE_REFERENCE.md  openenv_cheatsheet.md
vault/docs/knowledge-base/: 00-INDEX.md  02-REAL-WORLD-OPERATIONS.md  03-MATHEMATICAL-MODELS.md
vault/plans/active/: 2026-04-01-fish-farm-openenv.md
